fixed several calendar bugs for merging, partial/full overlap. allday events work properly now. trying to implement database entries but something is not working properly

--- a/server/public/css/style_base.css
+++ b/server/public/css/style_base.css
@@ -14,9 +14,9 @@
 }
 
 body, h1, h2, h3, h4, p, a {
-/* 	padding:0;
+ 	padding:0;
 	border:0;
-	margin:0; */
+	margin:0;
 }
 
 body{
